Add Workspace Marketplace link

--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
         <h2>Custom Google Solutions | Cutting-Edge Computer Science Program Development | Strategic AI Consulting</h2>
         <p></p>
         <p>
-            A dedicated team of educators and Computer Science experts passionate about transforming learning experiences through innovative and customized solutions. 
-            Based on our deep understanding of the unique technology challenges faced by K-12 educational paces, we offer a range of consulting services to complement and enhance your unique institution.
+            A dedicated team of Computer Science educators with formal academic backgrounds who are passionate about transforming learning experiences through innovative and customized solutions. 
+            Based on our deep understanding of the unique technology challenges faced by K-12 educational paces, we offer a range of informed consulting services to complement and enhance your unique institutional needs.
           </p>
                   <br><a class="contact" href="https://forms.gle/rX1hY4g8x4wnPVuz9">Contact Us!</a><br><br>
 
@@ -79,7 +79,7 @@
                 <li><h4 class="ri-check-double-line">Bespoke Google Workspace Application Development</h4>  Custom solutions to automate tasks, integrate systems, and enhance teacher, staff, and student productivity within the Google Workspace environment.</li><br>
                 <li><h4 class="ri-check-double-line">Computer Science and Robotics Curriculum Development and Evaluation</h4>  Engaging and up-to-date Computer Science curricula aligned with educational standards to prepare students for the future, including bespoke STEAM integrations.</li><br>
                 <li><h4 class="ri-check-double-line">Makerspace and Innovation Lab Design</h4> Accessible and innovative maker-based learning environments for authentic hands-on learning in lower, middle, and upper school populations.</li><br>
-                <li><h4 class="ri-check-double-line">AI-related Instructional Design</h4>  Proven pedagogical principles integrated with the latest approaches to creating effective and engaging AI-infused in-person and online learning experiences.</li><br>
+                <li><h4 class="ri-check-double-line">AI-infused Instructional Design</h4>  Proven pedagogical principles integrated with the latest approaches to creating effective and engaging AI-infused in-person and online learning experiences.</li><br>
                 <li><h4 class="ri-check-double-line">Ed Tech Consulting</h4> Strategic guidance and support to help educational leaders make informed decisions about AI and technology adoption, implementation, and integration.</li><br>
               </ul>
           </div>
