--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </p>
             <ul>
               <li><i class="bi bi-check"></i> <b>Easy cycle configuration. </b>Select an existing cycle calendar to provide a pattern for recurring day labels. Or, configure a spreadsheet with a more nuanced, multi-divisional calendar. 6-day cycle calendar scheduling, 7-day cycle calendar scheduling, 10-day cycle calendar scheduling? No problem. </li>
-              <li><i class="bi bi-check"></i> <b>Workspace ready. </b> Google Workspace Admins can quickly deploy Cyclone for all Workspace users. <a href="learn.html#how_to_configure_workspace">Learn how easy it is to configure Cyclone for your Google Workspace!</a></li>
+              <li><i class="bi bi-check"></i> <b><a href="https://workspace.google.com/marketplace/app/cyclone/64726481323">Workspace ready. </a></b> Google Workspace Admins can quickly deploy Cyclone for all Workspace users. <a href="learn.html#how_to_configure_workspace">Learn how easy it is to configure Cyclone for your Google Workspace!</a></li>
               <li><i class="bi bi-check"></i> <b>Daylight Savings and Time-Zone Aware. </b>  Events are scheduled with an awareness of time-zone specific patterns, including daylight savings.</li>
               <li><i class="bi bi-check"></i> <b>Optimized for speed.</b> User actions are performed quickly because Calendar operations are optimized on the backend to minimize calls to Google's services.</li>
             </ul>
