Fix typo in about.html regarding "educational spaces"

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <p></p>
         <p>
             A dedicated team of Computer Science educators with formal academic backgrounds who are passionate about transforming learning experiences through innovative and customized solutions. 
-            Based on our deep understanding of the unique technology challenges faced by K-12 educational paces, we offer a range of informed consulting services to complement and enhance your unique institutional needs.
+            Based on our deep understanding of the unique technology challenges faced by K-12 educational spaces, we offer a range of informed consulting services to complement and enhance your unique institutional needs.
           </p>
                   <br><a class="contact" href="https://forms.gle/rX1hY4g8x4wnPVuz9">Contact Us!</a><br><br>
 
