Almanac and Test Tracker updates

--- a/about.html
+++ b/about.html
@@ -78,9 +78,10 @@
               <ul>
                 <li><h4 class="ri-check-double-line">Bespoke Google Workspace Application Development</h4>  Custom solutions to automate tasks, integrate systems, and enhance teacher, staff, and student productivity within the Google Workspace environment.</li><br>
                 <li><h4 class="ri-check-double-line">Computer Science and Robotics Curriculum Development and Evaluation</h4>  Engaging and up-to-date Computer Science curricula aligned with educational standards to prepare students for the future, including bespoke STEAM integrations.</li><br>
-                <li><h4 class="ri-check-double-line">Makerspace and Innovation Lab Design</h4> Accessible and innovative maker-based learning environments for authentic hands-on learning in lower, middle, and upper school populations.</li><br>
+                <li><h4 class="ri-check-double-line">Maker space and Innovation Lab Design</h4> Accessible and innovative maker-based learning environments for authentic hands-on learning in lower, middle, and upper school populations.</li><br>
                 <li><h4 class="ri-check-double-line">AI-infused Instructional Design</h4>  Proven pedagogical principles integrated with the latest approaches to creating effective and engaging AI-infused in-person and online learning experiences.</li><br>
                 <li><h4 class="ri-check-double-line">Ed Tech Consulting</h4> Strategic guidance and support to help educational leaders make informed decisions about AI and technology adoption, implementation, and integration.</li><br>
+                <li><h4 class="ri-check-double-line">Referrals for Trusted Partners</h4> We're happy to point you in the right direction if an easy and reliable EdTech solution already exists... For instance, you might like to try <a href="https://www.willwilmot.com/">Test Tracker</a>!</li><br>
               </ul>
           </div>
         </div>
@@ -126,7 +127,7 @@
                 <div class="icon-box">
                     <div class="icon"><i class="bx bx-layer"></i></div>
                     <h4 class="title"><a href="">Precise and Accurate Test Calendars</a></h4>
-                    <p class="description">Display student-specific test schedules on a class-by-class basis directly in Google Calendar.</p>
+                    <p class="description">Try <a href="https://www.willwilmot.com/">Test Tracker</a>, a Google Calendar Add On to Schedule and Track Assessments Across Your School from a trusted partner.</p>
                 </div>
             </div>
         </div>
