--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
             <img src="assets/img/Planning.png" class="img-fluid" alt="Easily generate analytics for repeating cycle-based events in Google Calendar">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
-            <h3>Convenient Planning with Almanac (Coming Soon)</h3>
+            <h3>Convenient Planning with Almanac</h3>
             <p class="fst-italic">
               View nuanced meeting statistics and generate printable, customizable planners to help everyone understand their schedule.
             </p>
             <ul>
               <li><i class="bi bi-check"></i> <b>Helpful planning analytics.</b> Precalculated statistics like total meeting time, total number of meetings, and sequential event numbering. </li>
-              <li><i class="bi bi-check"></i> <b>Customizable planner options.</b> Planners are generated in Google Sheets, so customizing event names and style options is easy and familiar. </li>
-              <li><i class="bi bi-check"></i> <b>Unique colors in one Google Calendar.</b> Specify a unique color for a recurring meeting group to help you quickly understand the nature of a meeting.</li>
+              <li><i class="bi bi-check"></i> <b>Customizable planner options.</b> Planners are <a href="https://docs.google.com/spreadsheets/d/1n5fPIf4KnIwNtxNqi1-qaCGdV6wlF73pc6qqQyvwBIg/edit?usp=sharing">generated in Google Sheets</a>, so customizing event names and style options is easy and familiar. </li>
+              <li><i class="bi bi-check"></i> <b>Easy printing.</b> For the paper-and-pencil enthusiasts, easy <a href="assets/Sample_Planner.pdf">pdf export and printing</a> through Google Sheets. </li>
             </ul>
           </div>
         </div>
