--- a/learn.html
+++ b/learn.html
@@ -56,7 +56,7 @@
     <!-- --- Learn Section --- -->
     <section id="faq" class="faq">
       <div class="container" data-aos="fade-up">
-        <h3 id="how_to_add_delete_event">Use Cyclone to Add/Delete a Repeating Event on Google Calendar. </h3>
+        <h3 id="how_to_add_delete_event">Use Cyclone: Scheduler to Add/Delete a Repeating Event on Google Calendar. </h3>
         <ul class="faq-list">
           <li id="repeat_every_cycle_day_tutorial">
             <div data-bs-toggle="collapse" class="collapsed question" href="#repeat_every_cycle_day">Repeat an event every cycle day. <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
