inching toward Almanac

--- a/learn.html
+++ b/learn.html
@@ -253,7 +253,11 @@
             <div data-bs-toggle="collapse" href="#almanac_stats" class="collapsed question">Generate meeting statistics. <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="almanac_stats" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Cyclone Almanac can quickly generate meeting statistics for any collection of events. This Cyclone feature is coming soon!
+                <ol>
+                  <li>Select the calendars, start date, end date, and minimum number of meetings for the events you'd like to analyze.</li>
+                  <li>Click the "View Stats" button.</li>
+                  Cyclone will generate a summary of the number of meetings, total time spent across all meetings, and a break down of the number of meetings for each weekday and cycle day.</li>
+                </ol>
               </p>
             </div>
           </li>
@@ -261,7 +265,15 @@
           <div data-bs-toggle="collapse" href="#almanac_planner" class="collapsed question">Generate a printable planner. <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
           <div id="almanac_planner" class="collapse" data-bs-parent=".faq-list">
             <p>
-              Cyclone Almanac can quickly generate a printable planner with any collection of events. This Cyclone feature is coming soon!
+              Cyclone Almanac can quickly generate a printable planner with any collection of events. 
+              <ol>
+                  <li>Generate stats for events given your chosen calendars, start date, end date, and minimum number of meetings.</li>
+                  <li>Deselect events that you don't want to include in your planner.</li>
+                  <li>Click the "Generate Planner" button.</li>
+                  <li>Make a copy of the Google Sheets planner to customize or print.</li>
+                  A <a href="https://docs.google.com/spreadsheets/d/1n5fPIf4KnIwNtxNqi1-qaCGdV6wlF73pc6qqQyvwBIg/edit?usp=sharing">sample planner</a> is shown below: <br>
+                  <img src="assets/img/cyclone_almanac_planner_left_page.png" width="25%"/><img src="assets/img/cyclone_almanac_planner_right_page.png" width="25%"/>  <br>
+                </ol>
             </p>
           </div>
         </li>
