almanac screenshots for learn pages

--- a/learn.html
+++ b/learn.html
@@ -254,8 +254,13 @@
             <div id="almanac_stats" class="collapse" data-bs-parent=".faq-list">
               <p>
                 <ol>
-                  <li>Select the calendars, start date, end date, and minimum number of meetings for the events you'd like to analyze.</li>
-                  <li>Click the "View Stats" button.</li>
+                  <li><span class="how_to_step">Expand the Cyclone: Almanac card section.</span><br>
+                  <img src="assets/img/Almanac_STATS_0.png" width="20%"/>
+                  </li>
+                  <li><span class="how_to_step">Select the calendars, start date, end date, and minimum number of meetings for the events you'd like to analyze.</span><br>
+                  <img src="assets/img/Almanac_STATS_1.png" width="20%"/></li>
+                  <li><span class="how_to_step">Click the "View Stats" button.</span><br>
+                  <img src="assets/img/Almanac_STATS_2.png" width="20%"/></li>
                   Cyclone will generate a summary of the number of meetings, total time spent across all meetings, and a break down of the number of meetings for each weekday and cycle day.</li>
                 </ol>
               </p>
