--- a/index.html
+++ b/index.html
@@ -134,9 +134,15 @@
               View nuanced meeting statistics and generate printable, customizable planners to help everyone understand their schedule.
             </p>
             <ul>
-              <li><i class="bi bi-check"></i> <b>Helpful planning analytics.</b> Precalculated statistics like total meeting time, total number of meetings, and sequential event numbering. </li>
-              <li><i class="bi bi-check"></i> <b>Customizable planner options.</b> Planners are <a href="https://docs.google.com/spreadsheets/d/1n5fPIf4KnIwNtxNqi1-qaCGdV6wlF73pc6qqQyvwBIg/edit?usp=sharing">generated in Google Sheets</a>, so customizing event names and style options is easy and familiar. </li>
-              <li><i class="bi bi-check"></i> <b>Easy printing.</b> For the paper-and-pencil enthusiasts, easy <a href="assets/Sample_Planner.pdf">pdf export and printing</a> through Google Sheets. </li>
+              <li><i class="bi bi-check"></i> <b>Helpful planning analytics.</b> Precalculated statistics like total meeting time, total number of meetings, and sequential event numbering.<br>
+              <center><img src="assets/img/Almanac_STATS.png" width="25%"/></center>
+             </li>
+              <li><i class="bi bi-check"></i> <b>Customizable planner options.</b> Planners are <a href="https://docs.google.com/spreadsheets/d/1n5fPIf4KnIwNtxNqi1-qaCGdV6wlF73pc6qqQyvwBIg/edit?usp=sharing">generated in Google Sheets</a>, so customizing event names and style options is easy and familiar. <br>
+              <center><img src="assets/img/Almanac_Numbered_Meeting_Tabs.png" width="80%"/></center>
+            </li>
+              <li><i class="bi bi-check"></i> <b>Easy printing.</b> For the paper-and-pencil enthusiasts, easy <a href="assets/Sample_Planner.pdf">pdf export and printing</a> through Google Sheets. <br>
+                 <center> <img src="assets/img/cyclone_almanac_planner_left_page.png" width="40%"/><img src="assets/img/cyclone_almanac_planner_right_page.png" width="40%"/> </center> <br>
+              </li>
             </ul>
           </div>
         </div>
