link update for SEO

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
           <div class="col-lg-12">
            
             <p>
-                Tailored EdTech is proud to be the creator of <a href="index.html">Cyclone</a>, a popular Google Workspace Add-on for Google Calendar that simplifies the management of repeating cycle-based events. Cyclone was born out of a need for a more efficient way to handle complex scheduling patterns common in educational settings.
+                Tailored EdTech is proud to be the creator of <a href="https://workspace.google.com/marketplace/app/cyclone/64726481323">Cyclone</a>, a popular Google Workspace Add-on for Google Calendar that simplifies the management of repeating cycle-based events. Cyclone was born out of a need for a more efficient way to handle complex scheduling patterns common in educational settings.
               </p>
               <p>
                 Beyond Cyclone, we offer a comprehensive suite of consulting services to help educational institutions thrive in the fast-changing technology space:
