--- a/privacy.html
+++ b/privacy.html
@@ -53,18 +53,18 @@
 
     <div class="section-title">
       <br> <br> <br> <br>
-      <h2>Privacy Policy for Cylcone</h2>
+      <h2>Privacy Policy for Cyclone</h2>
     </div>
     <section class="terms-section">
       <h2>1. Introduction</h2>
-      <p>TailoredEdTech ("we," "us," or "our") is committed to protecting the privacy of all users of Cylcone (the
+      <p>TailoredEdTech ("we," "us," or "our") is committed to protecting the privacy of all users of Cyclone (the
         "Service"), our Google Workspace add-on. This includes both the school or institution ("Customer") that
         purchases a license to the Service, and the individuals authorized by the Customer to use the Service ("End
         Users" or "users"). This Privacy Policy explains how we collect, use, and disclose information when the Service
         is used.</p>
 
       <h2>2. Information We Collect and How We Use It</h2>
-      <p>Cylcone accesses the following information from End Users’ Google Workspace accounts:</p>
+      <p>Cyclone accesses the following information from End Users’ Google Workspace accounts:</p>
       <ul>
         <li><strong>Email addresses:</strong> Cyclone uses End Users’ Google Account email addresses to associate them
           with their school or institution’s domain name to retrieve the Customer’s product license and schedules.</li>
@@ -77,15 +77,32 @@
           interface and scheduling recurring events as instructed by the Customer and End Users through the Service.
         </li>
       </ul>
+      <p>For Customers that explicitly opt-in for Cyclone: Almanac functionality, the following information is sent to an externally-hosted server to generate Google Sheets planners via the Google API:
+        <ul>
+            <li><strong>Email addresses</strong>: Cyclone: Almanac uses End Users’ Google Account email addresses to associate them with a generated Google Sheets document.</li>
+            <li><strong>Calendar Event Details</strong>: Cyclone: Almanac accesses calendar events that End Users have opted to include in their planners, including but not limited to calendar event titles, descriptions, locations, dates and times. 
+              We access this data solely for the purpose of generating Google Sheets planners for End Users as instructed by the Customer and End Users through the Service.</li>
+        </ul>
 
       <h2>3. Data Sharing</h2>
       <p>We do not share your information with any third parties, except as required by law or legal process.</p>
 
       <h2>4. Data Security</h2>
-      <p>All data accessed by Cylcone is stored and processed within the Google Workspace environment. We rely on
+      <p>All data accessed by Cyclone is stored and processed within the Google Workspace environment. We rely on
         Google's security measures to protect your data. However, no method of transmission over the internet or method
         of electronic storage is completely secure. Therefore, while we strive to use commercially acceptable means to
         protect your information, we cannot guarantee its absolute security.</p>
+
+      <p>For Customers that explicitly opt-in for Cyclone: Almanac functionality, an externally-hosted server is used to generate Google Sheets planners via the Google API.
+        <ul>
+          <li><strong>Data Transmission:</strong> Cyclone: Almanac sends the following data to an externally-hosted server using HTTPS, an encrypted protocol using SSL/TLS:
+            <ul>
+            <li><strong>Email addresses</strong>: Cyclone: Almanac uses End Users’ Google Account email addresses to associate them with a generated Google Sheets document.</li>
+            <li><strong>Calendar Event Details</strong>: Cyclone: Almanac accesses calendar events that End Users have opted to include in their planners, including but not limited to calendar event titles, descriptions, locations, dates and times. 
+              We access this data solely for the purpose of generating Google Sheets planners for End Users as instructed by the Customer and End Users through the Service.</li>
+            </ul>
+          <li><strong>Data Storage:</strong> No End User data is stored on the externally-hosted server. Planners are created and stored in a Google Drive folder owned by the Customer.</p>
+          </ul>
 
       <h2>5. Children's Privacy</h2>
       <p>If the Customer allows End Users under 13 to use the Service, the Customer consents to the collection and use
@@ -102,7 +119,7 @@
       </ul>
 
       <h2>7. Your Choices</h2>
-      <p>End Users can control the information Cylcone accesses by modifying the permissions granted to the add-on
+      <p>End Users can control the information Cyclone accesses by modifying the permissions granted to the add-on
         within their Google Workspace settings, although this may impede the functionality of the add-on. They can also
         revoke access to the Service entirely by uninstalling the add-on.</p>
 
